vendor/pin-project-1.0.7/tests/ui/pinned_drop/unsafe-call.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-call.rs:14:9
   |
14 |         self.project().f.get_unchecked_mut(); //~ ERROR call to unsafe function is unsafe and requires unsafe function or block [E0133]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
